tests/sema/fail/v21_fail_extern_duplicate.ep
# COMPILE_FAIL_CONTAINS: conflicting extern declaration Tick
extern "a.dll" fun Tick(): u64
extern "b.dll" fun Tick(): u64
fun main(): void {}
